@@ -124,7 +124,7 @@ class UserError(Exception):
 class StopError(Exception):
     pass
 
-class EnvironmentError(Exception):
+class SConsEnvironmentError(Exception):
     pass
 
 class MSVCError(IOError):
@@ -184,7 +184,7 @@ def convert_to_BuildError(status, exc_info=None):
             filename=filename,
             exc_info=exc_info)
 
-    elif isinstance(status, (EnvironmentError, OSError, IOError)):
+    elif isinstance(status, (SConsEnvironmentError, OSError, IOError)):
         # If an IOError/OSError happens, raise a BuildError.
         # Report the name of the file or directory that caused the
         # error, which might be different from the target being built
